--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>portfolio</title>
 </head>
 <body>
-    hi i am Mohammed Nooh
+    Hi! i am Mohammed Nooh
+    I am currently studying Btech CSE in college of engineering thalassery
+    
 </body>
 </html>
