--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>portfolio</title>
 </head>
 <body>
-    Hi! i am Mohammed Nooh
+    Hi! i am Mohammed Nooh\
     I am currently studying Btech CSE in college of engineering thalassery
     
 </body>
