added project details

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     Hi! i am Mohammed Nooh\
     I am currently studying Btech CSE in college of engineering thalassery
+
+    I have worked on a few CLI apps. I will showcase it here tomorrow.
     
 </body>
 </html>
