--- a/index.html
+++ b/index.html
@@ -11,5 +11,13 @@
 
     I have worked on a few CLI apps. I will showcase it here tomorrow.
     
+
+    I like to watch movies
+
+        my favourite movies are:
+        1.batman vs superman dawn of justice
+        2.the usual suspects 
+        3.shrek 1
+
 </body>
 </html>
