--- a/index.html
+++ b/index.html
@@ -6,18 +6,41 @@
     <title>portfolio</title>
 </head>
 <body>
-    Hi! i am Mohammed Nooh\
-    I am currently studying Btech CSE in college of engineering thalassery
 
-    I have worked on a few CLI apps. I will showcase it here tomorrow.
-    
+<h1>Nooh's Component library</h1>
 
-    I like to watch movies
+<p>I am currently attending neogcamp level zero and this component library is to make all my projects look good and consistent</p>
 
-        my favourite movies are:
-        1.batman vs superman dawn of justice
-        2.the usual suspects 
-        3.shrek 1
+<hr>
+
+<h2>@Typography</h2>
+
+<h1>The biggest heading</h1>
+<h2>The second biggest heading</h2>
+
+
+<p>This is a normal sized paragraph</p>
+
+<small>This is a relatively small paragraph</small>
+
+<hr>
+
+<h2>@Container</h2>
+
+<h3>Fluid Container</h3>
+<div>this is a fluid Container this will go till the end of the page</div>
+
+<h3>Center Container</h3>
+<div>this is a center Container this will go till specified width</div>
+
+<hr>
+
+
+
+
+
+
+
 
 </body>
 </html>
