--- a/index.html
+++ b/index.html
@@ -35,6 +35,62 @@
 
 <hr>
 
+<h2>@Links</h2>
+
+<a href="\">Primary link</a>
+
+<a href="\">Secondary link</a>
+
+<hr>
+
+<h2>@Lists</h2>
+
+<h3>unordered lists</h3>
+
+<ul>
+    <li>item1</li>
+    <li>item2</li>
+    <li>item3</li>
+
+</ul>
+
+<h3>unordered inline lists</h3>
+
+<ul>
+    <li>inline item1</li>
+    <li>inline item2</li>
+    <li>inline item3</li>
+</ul>
+
+
+<h3>ordered lists</h3>
+
+<ol>
+    <li>milk</li>
+    <li>eggs</li>
+    <li>bread</li>
+</ol>
+
+<hr>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
