--- a/index.html
+++ b/index.html
@@ -73,8 +73,30 @@
 
 <hr>
 
+<h2>@Nav</h2>
+<nav>
+<div >I am a developer</div>
+
+<ul>
+    <li>
+        <a href=\>Home</a>
+    </li>
+    <li>
+        <a href=\>Projects</a>
+    </li>
+    <li>
+        <a href=\>About</a>
+    </li>
+</ul>
+</nav>
+<hr>
 
 
+<h2>@Header</h2>
+
+<img src="images/devpic.svg">
+<h1>header inside image</h1>
+<hr>
 
 
 
