--- a/index.html
+++ b/index.html
@@ -1,102 +1,129 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portfolio</title>
 </head>
+
 <body>
 
-<h1>Nooh's Component library</h1>
+    <h1>Nooh's Component library</h1>
 
-<p>I am currently attending neogcamp level zero and this component library is to make all my projects look good and consistent</p>
+    <p>I am currently attending neogcamp level zero and this component library is to make all my projects look good and
+        consistent</p>
 
-<hr>
+    <hr>
 
-<h2>@Typography</h2>
+    <h2>@Typography</h2>
 
-<h1>The biggest heading</h1>
-<h2>The second biggest heading</h2>
-
-
-<p>This is a normal sized paragraph</p>
-
-<small>This is a relatively small paragraph</small>
-
-<hr>
-
-<h2>@Container</h2>
-
-<h3>Fluid Container</h3>
-<div>this is a fluid Container this will go till the end of the page</div>
-
-<h3>Center Container</h3>
-<div>this is a center Container this will go till specified width</div>
-
-<hr>
-
-<h2>@Links</h2>
-
-<a href="\">Primary link</a>
-
-<a href="\">Secondary link</a>
-
-<hr>
-
-<h2>@Lists</h2>
-
-<h3>unordered lists</h3>
-
-<ul>
-    <li>item1</li>
-    <li>item2</li>
-    <li>item3</li>
-
-</ul>
-
-<h3>unordered inline lists</h3>
-
-<ul>
-    <li>inline item1</li>
-    <li>inline item2</li>
-    <li>inline item3</li>
-</ul>
+    <h1>The biggest heading</h1>
+    <h2>The second biggest heading</h2>
 
 
-<h3>reverse ordered lists</h3>
+    <p>This is a normal sized paragraph</p>
 
-<ol>
-    <li>milk</li>
-    <li>eggs</li>
-    <li>bread</li>
-</ol>
+    <small>This is a relatively small paragraph</small>
 
-<hr>
+    <hr>
 
-<h2>@Nav</h2>
-<nav>
-<div >I am a developer</div>
+    <h2>@Container</h2>
 
-<ul>
-    <li>
-        <a href=\>Home</a>
-    </li>
-    <li>
-        <a href=\>Projects</a>
-    </li>
-    <li>
-        <a href=\>About</a>
-    </li>
-</ul>
-</nav>
-<hr>
+    <h3>Fluid Container</h3>
+    <div>this is a fluid Container this will go till the end of the page</div>
+
+    <h3>Center Container</h3>
+    <div>this is a center Container this will go till specified width</div>
+
+    <hr>
+
+    <h2>@Links</h2>
+
+    <a href="\">Primary link</a>
+
+    <a href="\">Secondary link</a>
+
+    <hr>
+
+    <h2>@Lists</h2>
+
+    <h3>unordered lists</h3>
+
+    <ul>
+        <li>item1</li>
+        <li>item2</li>
+        <li>item3</li>
+
+    </ul>
+
+    <h3>unordered inline lists</h3>
+
+    <ul>
+        <li>inline item1</li>
+        <li>inline item2</li>
+        <li>inline item3</li>
+    </ul>
 
 
-<h2>@Header</h2>
+    <h3>reverse ordered lists</h3>
 
-<img src="images/devpic.svg">
-<h1>header inside image</h1>
-<hr>
+    <ol>
+        <li>milk</li>
+        <li>eggs</li>
+        <li>bread</li>
+    </ol>
+
+    <hr>
+
+    <h2>@Nav</h2>
+    <nav>
+        <div>I am a developer</div>
+
+        <ul>
+            <li>
+                <a href=\>Home</a>
+            </li>
+            <li>
+                <a href=\>Projects</a>
+            </li>
+            <li>
+                <a href=\>About</a>
+            </li>
+        </ul>
+    </nav>
+    <hr>
+
+
+    <h2>@Header</h2>
+    <img src="images/devpic.svg">
+    <h1>header inside image</h1>
+    <hr>
+
+    <h2>@Section</h2>
+
+    <section>
+        <h3>White section</h3>
+        <p>this section will have white background</p>
+    </section>
+
+    <section>
+        <h3>OffWhite section</h3>
+        <p>this section will have gray background</p>
+    </section>
+    <hr>
+
+    <h2>@Footer</h2>
+
+
+    <footer>
+        <div >some heading inside footer</div>
+        <ul>
+            <li>social1</li>
+            <li>social2</li>
+            <li>social3</li>
+        </ul>
+    </footer>
 
 
 
@@ -121,4 +148,5 @@
 
 
 </body>
+
 </html>
