--- a/index.html
+++ b/index.html
@@ -96,8 +96,10 @@
 
 
     <h2>@Header</h2>
+    <header>
     <img src="images/devpic.svg">
     <h1>header inside image</h1>
+    </header>
     <hr>
 
     <h2>@Section</h2>
