updated css upto containers

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portfolio</title>
+
+<link rel="stylesheet" href="styles.css">
+
 </head>
 
 <body>
@@ -31,10 +34,10 @@
     <h2>@Container</h2>
 
     <h3>Fluid Container</h3>
-    <div>this is a fluid Container this will go till the end of the page</div>
+    <div class="container">this is a fluid Container this will go till the end of the page</div>
 
     <h3>Center Container</h3>
-    <div>this is a center Container this will go till specified width</div>
+    <div class="container container-center">this is a center Container this will go till specified width</div>
 
     <hr>
 
