--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <h3>unordered lists</h3>
 
-    <ul>
+    <ul class="list-non-bullet">
         <li>item1</li>
         <li>item2</li>
         <li>item3</li>
@@ -62,16 +62,16 @@
 
     <h3>unordered inline lists</h3>
 
-    <ul>
-        <li>inline item1</li>
-        <li>inline item2</li>
-        <li>inline item3</li>
+    <ul class="list-non-bullet">
+        <li class="list-item-inline">inline item1</li>
+        <li  class="list-item-inline">inline item2</li>
+        <li class="list-item-inline">inline item3</li>
     </ul>
 
 
     <h3>reverse ordered lists</h3>
 
-    <ol>
+    <ol reversed>
         <li>milk</li>
         <li>eggs</li>
         <li>bread</li>
