--- a/index.html
+++ b/index.html
@@ -80,18 +80,18 @@
     <hr>
 
     <h2>@Nav</h2>
-    <nav>
-        <div>I am a developer</div>
+    <nav >
+        
 
-        <ul>
+        <ul class="list-non-bullet nav-bar">
             <li>
-                <a href=\>Home</a>
+                <a class="nav-bar-item" href=\>Home</a>
             </li>
             <li>
-                <a href=\>Projects</a>
+                <a class="nav-bar-item" href=\>Projects</a>
             </li>
             <li>
-                <a href=\>About</a>
+                <a class="nav-bar-item" href=\>About</a>
             </li>
         </ul>
     </nav>
