updated CSS upto footer

--- a/index.html
+++ b/index.html
@@ -99,34 +99,46 @@
 
 
     <h2>@Header</h2>
-    <header>
-        <img src="images/devpic.svg">
-        <h1>header inside image</h1>
+    <header class="header">
+        <img class="header header-image" src="images/devpic.svg">
+        <h1 class="header header-hero">header inside<span class="header header-hero-inverted">image</span> </h1>
     </header>
     <hr>
 
     <h2>@Section</h2>
 
-    <section>
-        <h3>White section</h3>
+    <section class="section">
+        <div class="container container-center">
+            <h1 >White section</h1>
         <p>this section will have white background</p>
+        </div>
+        
     </section>
 
-    <section>
-        <h3>OffWhite section</h3>
+    <section class="section ow">
+        <div class="container container-center">
+            <h1 >OffWhite section</h1>
         <p>this section will have gray background</p>
+        </div>
+        
     </section>
     <hr>
 
     <h2>@Footer</h2>
 
 
-    <footer>
-        <div>some heading inside footer</div>
-        <ul>
-            <li>social1</li>
-            <li>social2</li>
-            <li>social3</li>
+    <footer class="footer">
+        <div class="footer-head">some heading inside footer</div>
+        <ul class="list-non-bullet footer-bar">
+            <li>
+                <a class="footer-bar-item" href=\>Social1</a>
+            </li>
+            <li>
+                <a class="footer-bar-item" href=\>Social2</a>
+            </li>
+            <li>
+                <a class="footer-bar-item" href=\>Social3</a>
+            </li>
         </ul>
     </footer>
 
