created blog pages

--- a/blogs.html
+++ b/blogs.html
@@ -27,6 +27,34 @@
 
 
 
-    <h1>check out my blogs</h1>
+    <h1 class="header header-hero">Check out my  <span class="header header-hero-inverted">Blogs</span> </h1>
+
+    <div class="container container-center">
+
+        <h1><a class="blog-head" href=#>Dummy blog1</a></h1>
+        <small>28/05/2021</small>
+        <p>I dont know how to write a blog still thinking over ideas ....</p>
+
+
+    </div>
+
+    <div class="container container-center">
+
+        <h1><a class="blog-head" href=#>Dummy blog2</a></h1>
+        <small>29/05/2021</small>
+        <p>I dont know how to write a blog still thinking over ideas ....</p>
+
+
+    </div>
+
+
+
+
+
+
+
+
+
+
 </body>
 </html>
