--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 <section class="section">
     <div class="container container-center">
         <h1 >Projects</h1>
-    <p><strong> like to showcase my projects and thus you can see my projects online</strong></p>
-    <a class="link link-primary" href="\">Primary link</a>
+    <p><strong>I like to showcase my projects and you can see my projects online</strong></p>
+    <a class="link link-primary" href="\">Browse Projects</a>
     </div>
     
 </section>
@@ -66,7 +66,7 @@
     <div class="container container-center">
         <h1 >Blogs</h1>
     <p><strong>I also like to write blogs feel free to check them out and tell me how you feel</strong></p>
-    <a class="link link-primary" href="\">Primary link</a>
+    <a class="link link-primary" href="\">Browse Blogs</a>
     </div>
     
 </section>
@@ -86,10 +86,10 @@
             <a class="footer-bar-item" href="https://github.com/">Github</a>
         </li>
         <li>
-            <a class="footer-bar-item" href="https://twitter.com/nooh07161028">Twitter</a>
+            <a class="footer-bar-item" href="https://twitter.com/mohdnoohv">Twitter</a>
         </li>
         <li>
-            <a class="footer-bar-item" href=\>LinkdIn</a>
+            <a class="footer-bar-item" href="https://www.linkedin.com/in/mohammed-nooh-vettiyattil-470082215/">LinkedIn</a>
         </li>
     </ul>
 </footer>
