--- a/projects.html
+++ b/projects.html
@@ -31,6 +31,30 @@
 <ol reversed>
     <div class="container container-center">
         <li>
+            <h1 >Talk Valyrian</h1>
+            <small>08/05/2021</small>
+            <p>A Website to convert english to Valyrian the language used in my favourite show "GAME OF THRONES"</p>
+            <a class="link link-primary" href="https://speak-valyrian.netlify.app/">Live Project</a>
+        
+            <a class="link link-secondary" href="https://github.com/mohammed-nooh/talk-valyrian">View source</a>
+                </li>
+
+
+    </div>
+    <div class="container container-center">
+        <li>
+            <h1 >Banana Talk</h1>
+            <small>08/05/2021</small>
+            <p>A Website to translate English to banana talk the language of the minions from the movie Despicable Me</p>
+            <a class="link link-primary" href="https://banana-speak-n.netlify.app/">Live Project</a>
+        
+            <a class="link link-secondary" href="https://github.com/mohammed-nooh/banana-speak">View source</a>
+                </li>
+
+
+    </div>
+    <div class="container container-center">
+        <li>
             <h1 >A HIMYM fan quiz </h1>
             <small>08/05/2021</small>
             <p>A CLI quiz app i made with NodeJs to test peoples knowledge of the show How I Met Your Mother</p>
