--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div class="container container-center">
         <h1 >Projects</h1>
     <p><strong>I like to showcase my projects and you can see my projects online</strong></p>
-    <a class="link link-primary" href="\">Browse Projects</a>
+    <a class="link link-primary" href="projects.html">Browse Projects</a>
     </div>
     
 </section>
@@ -66,7 +66,7 @@
     <div class="container container-center">
         <h1 >Blogs</h1>
     <p><strong>I also like to write blogs feel free to check them out and tell me how you feel</strong></p>
-    <a class="link link-primary" href="\">Browse Blogs</a>
+    <a class="link link-primary" href="blogs.html">Browse Blogs</a>
     </div>
     
 </section>
