--- a/projects.html
+++ b/projects.html
@@ -34,6 +34,33 @@
 
     <div class="container container-center">
         <li>
+            <h1 >Prime checker</h1>
+            <small>08/05/2021</small>
+            <p>A CLI app to check if your DOB is prime number or not.</p>
+            <a class="link link-primary" href="https://replit.com/@mohammednooh/prime-number-checker#index.js?embed=1&output=1">Live Project</a>
+        
+            <a class="link link-secondary" href="https://github.com/mohammed-nooh/prime-number-checker/tree/master">View source</a>
+                </li>
+
+
+    </div>
+
+    <div class="container container-center">
+        <li>
+            <h1 >Leap year checker</h1>
+            <small>08/05/2021</small>
+            <p>A CLI app to check if your year of birth is leap year or not.</p>
+            <a class="link link-primary" href="https://replit.com/@mohammednooh/leap-year-checker#index.js?embed=1&output=1">Live Project</a>
+        
+            <a class="link link-secondary" href="https://github.com/mohammed-nooh/-leap-year-checker">View source</a>
+                </li>
+
+
+    </div>
+
+
+    <div class="container container-center">
+        <li>
             <h1 >Movie recommendation app</h1>
             <small>08/05/2021</small>
             <p>A Webapp for movie recommendations</p>
