--- a/blog-pages/how-i-started-coding.html
+++ b/blog-pages/how-i-started-coding.html
@@ -5,8 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <main id="blog-page">
+
+        <h1>How I started coding</h1>
+
+        
+
+    </main>
     
 </body>
 </html>
