--- a/blog-pages/why-i-started-coding.html
+++ b/blog-pages/why-i-started-coding.html
@@ -5,14 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
     <main id="blog-page">
 
-        <h1>How I started coding</h1>
+        <h1>Why I started coding</h1>
+        <img src="/images/blog1image.svg" alt="Image of people hanging out" id="blog1image">
 
-        
+
 
     </main>
     
