--- a/blog-pages/why-i-started-coding.html
+++ b/blog-pages/why-i-started-coding.html
@@ -29,7 +29,7 @@
         </p>
 
         <p>
-            Then i found another program called neog camp where he was training anyone who was willing to learn web development and getting them jobs. I was really amazed by the effort this person was putting in to change another persons life and while his videos all i could think was that here is a person who has created a coding community created a program to teach anyone who was ready to learn and also helps, get them jobs, now what more excuses did i have to not start. From there i started learning web development from neogcamp level 0 and freecodecamp.
+            Then i found another program called neog camp where he was training anyone who was willing to learn web development and getting them jobs. I was really amazed by the effort this person was putting in to change another persons life and while watching his videos all i could think was that here is a person who has created a coding community created a program to teach anyone who was ready to learn and also helps, get them jobs, now what more excuses did i have to not start. From there i started learning web development from neogcamp level 0 and freecodecamp.
         </p>
 
 
