--- a/blogs.html
+++ b/blogs.html
@@ -31,7 +31,7 @@
 
     <div class="container container-center">
 
-        <h1><a class="blog-head" href=#>Dummy blog1</a></h1>
+        <h1><a class="blog-head" href="blog-pages/why-i-started-coding.html">Dummy blog1</a></h1>
         <small>28/05/2021</small>
         <p>I dont know how to write a blog still thinking over ideas ....</p>
 
