--- a/blogs.html
+++ b/blogs.html
@@ -31,17 +31,17 @@
 
     <div class="container container-center">
 
-        <h1><a class="blog-head" href="blog-pages/why-i-started-coding.html">Dummy blog1</a></h1>
-        <small>28/05/2021</small>
-        <p>I dont know how to write a blog still thinking over ideas ....</p>
+        <h1><a class="blog-head" href="blog-pages/why-i-started-coding.html">Why I Started Coding</a></h1>
+        <small>15/09/2021</small>
+        <p>It all started a few months back while i was surfing on instagram while i came across an interesting reel where a person was speaking about the level of knowledge the current college students have in India ....</p>
 
 
     </div>
 
     <div class="container container-center">
 
-        <h1><a class="blog-head" href=#>Dummy blog2</a></h1>
-        <small>29/05/2021</small>
+        <h1><a class="blog-head" href=#>Difference between Var,Let and Const in JavaScript</a></h1>
+        <small>16/09/2021</small>
         <p>I dont know how to write a blog still thinking over ideas ....</p>
 
 
