--- a/blogs.html
+++ b/blogs.html
@@ -40,7 +40,7 @@
 
     <div class="container container-center">
 
-        <h1><a class="blog-head" href=#>Difference between Var,Let and Const in JavaScript</a></h1>
+        <h1><a class="blog-head" href="https://nooh.hashnode.dev/difference-between-var-let-and-const-in-javascript">Difference between Var,Let and Const in JavaScript</a></h1>
         <small>16/09/2021</small>
         <p>I dont know how to write a blog still thinking over ideas ....</p>
 
