update footer in new branch

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | Nooh</title>
+    <script src="https://kit.fontawesome.com/8ca73077b1.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -78,7 +79,7 @@
 
 <!-- footer part -->
 
-
+<!-- 
 <footer class="footer">
     <div class="footer-head"><h2>Contact Me...</h2> </div>
     <ul class="list-non-bullet footer-bar">
@@ -92,27 +93,16 @@
             <a class="footer-bar-item" href="https://www.linkedin.com/in/mohammed-nooh-vettiyattil-470082215/">LinkedIn</a>
         </li>
     </ul>
+</footer> -->
+
+
+<footer id="footer">
+    <p>Connect with me</p>
+    <a class="footer-link" href="https://github.com/mohammed-nooh"><i class="fab fa-github icon"></i></a>
+    <a class="footer-link" href="https://twitter.com/mohdnoohv"><i class="fab fa-twitter icon"></i></a>
+    <a class="footer-link" href="https://www.linkedin.com/in/mohammed-nooh-vettiyattil-470082215/"><i class="fab fa-linkedin-in icon"></i></a>
+    <a class="footer-link" href="https://mohammednooh.netlify.app/"><i class="far fa-user icon"></i></a>
 </footer>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
