--- a/projects.html
+++ b/projects.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects | Nooh</title>
+    <script src="https://kit.fontawesome.com/8ca73077b1.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -143,6 +144,16 @@
         
 
 </ol>
+
+
+
+<footer id="footer">
+    <p>Connect with me</p>
+    <a class="footer-link" href="https://github.com/mohammed-nooh"><i class="fab fa-github icon"></i></a>
+    <a class="footer-link" href="https://twitter.com/mohdnoohv"><i class="fab fa-twitter icon"></i></a>
+    <a class="footer-link" href="https://www.linkedin.com/in/mohammed-nooh-vettiyattil-470082215/"><i class="fab fa-linkedin-in icon"></i></a>
+    <a class="footer-link" href="https://mohammednooh.netlify.app/"><i class="far fa-user icon"></i></a>
+</footer>
 
 </body>
 </html>
