--- a/blogs.html
+++ b/blogs.html
@@ -43,7 +43,7 @@
 
         <h1><a class="blog-head" href="https://nooh.hashnode.dev/difference-between-var-let-and-const-in-javascript">Difference between Var,Let and Const in JavaScript</a></h1>
         <small>16/09/2021</small>
-        <p>I dont know how to write a blog still thinking over ideas ....</p>
+        <p>Var is globally scoped or function scoped. The scope is global when var variable is declared outside of a function....</p>
 
 
     </div>
