feat : added read more buttons for blogs

--- a/blogs.html
+++ b/blogs.html
@@ -36,6 +36,8 @@
         <small>15/09/2021</small>
         <p>It all started a few months back while i was surfing on instagram while i came across an interesting reel where a person was speaking about the level of knowledge the current college students have in India ....</p>
 
+        <a class="link link-primary" href="blog-pages/why-i-started-coding.html">Read more</a>
+
 
     </div>
 
@@ -44,6 +46,9 @@
         <h1><a class="blog-head" href="https://nooh.hashnode.dev/difference-between-var-let-and-const-in-javascript">Difference between Var,Let and Const in JavaScript</a></h1>
         <small>16/09/2021</small>
         <p>Var is globally scoped or function scoped. The scope is global when var variable is declared outside of a function....</p>
+        <a class="link link-primary" href="https://nooh.hashnode.dev/difference-between-var-let-and-const-in-javascript">Read more</a>
+        <br>
+        <br>
 
 
     </div>
