--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <section class="section ow">
     <div class="container container-center">
         <h1 >Technology</h1>
-    <p><strong>I am familiar with HTML5,CSS3,JavaScript,Nodejs and python</strong></p>
+    <p><strong>I am familiar with HTML5,CSS3,JavaScript,Nodejs,React and Git</strong></p>
     </div>
     
 </section>
